@@ -159,66 +159,6 @@ public abstract class OsgiListenerUtils {
 	}
 
 	/**
-	 * Removes the given service listeners, registered under the given filter.
-	 * This method will create synthetic unregistration events for the services
-	 * discovered by the filter which will be delivered to the listener. This
-	 * gives the listener the ability to react before being unregistered (such
-	 * as doing clean up). Normally the given filter is identical to the one
-	 * under which the listener has been registered with.
-	 * 
-	 * <p/> <strong>NOTE:</strong> there is no way to verify whether a listener
-	 * that is removed has been previously registered with the bundle context -
-	 * the synthetic events will be always be to the listener.
-	 * 
-	 * @param context bundle context in which the listener is registered
-	 * @param listener listener to unregister
-	 * @param filter filter under which the listener has been used
-	 * @return true if the listnener unregistration has succeeded, false
-	 * otherwise (for example the bundle context is invalid)
-	 */
-	//TODO: method is not used in the project, consider remove it
-	public static boolean removeServiceListener(BundleContext context, ServiceListener listener, Filter filter) {
-		String toStringFilter = (filter == null ? null : filter.toString());
-		return removeServiceListener(context, listener, toStringFilter);
-	}
-
-	/**
-	 * Remove a service listener from the given application context, under the
-	 * specified filter (given as a String).
-	 * 
-	 * @param context bundle context in which the listener is registered
-	 * @param listener listener listener to unregister
-	 * @param filter filter under which the listener has been used
-	 * @see #removeServiceListener(BundleContext, ServiceListener, Filter)
-	 * @return true if the listener unregistration has succeeded, false
-	 * otherwise (for example the bundle context is invalid)
-	 */
-	//TODO: method is not used in the project, consider remove it
-	public static boolean removeServiceListener(BundleContext context, ServiceListener listener, String filter) {
-		if (context == null || listener == null)
-			return false;
-		// Now get the already registered services and call the listener.
-		// Note that this is necessary because when a context is closed the
-		// listeners get unregistered
-		// (and the proxies destroyed) before the listeners' destroy() methods
-		// get called. This makes
-		// it impossible to do the correct thing by the listener without help
-		// from the framework.
-		ServiceReference[] alreadyRegistered = OsgiServiceReferenceUtils.getServiceReferences(context, filter);
-
-		if (log.isTraceEnabled())
-			log.trace("calling listener on already registered services: "
-					+ ObjectUtils.nullSafeToString(alreadyRegistered));
-
-		if (alreadyRegistered != null) {
-			for (int i = 0; i < alreadyRegistered.length; i++) {
-				listener.serviceChanged(new ServiceEvent(ServiceEvent.UNREGISTERING, alreadyRegistered[i]));
-			}
-		}
-		return removeServiceListener(context, listener);
-	}
-
-	/**
 	 * Remove a service listener from the given application context. This method
 	 * simply takes care of any exceptions that might be thrown (in case the
 	 * context is invalid).
