@@ -30,7 +30,7 @@
 	<para>
 	  This document describes known issues (and possible work-arounds). Each issue mentions the section of the reference
 	  documentation that explain the behaviour along with the associated
-	  <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI">JIRA</ulink> entry which
+	  <ulink url="http://jira.springframework.org/browse/OSGI">JIRA</ulink> entry which
 	  provides an estimate on when it will be solved.
 	  As a rule, the next release Spring Dynamic Modules aims to solve most, if not all of them.
 	</para>
@@ -48,7 +48,7 @@
       	number of runs and JVM platform used. We believe the cause is a <literal>Weak</literal> reference - see 
       	<ulink url=" http://www.nabble.com/cglib-2.1_3-no-dep-and-NPE-in-AbstractClassGenerator-tf3645088.html#a10179844">this</ulink> discussion. 
       	</para> 
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-110">OSGI-110</ulink></para> 
+      	<para>See <ulink url="http://jira.springframework.org/browse/OSGI-110">OSGI-110</ulink></para> 
 	</section>	
 
 	<section id="OSGI-167">
@@ -56,15 +56,15 @@
       	<para>Currently there is no support for importer/listener cyclic references. While this is not a bug, it is a powerful feature to be able
       	to declare nested listeners that have a reference to the importer bean dependencies.</para><para>As a work around, do not create cycles
       	between bean definition references.</para>
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-167">OSGI-167</ulink></para> 
+      	<para>See <ulink url="http://jira.springframework.org/browse/OSGI-167">OSGI-167</ulink></para> 
 	</section>
 
     <section id="OSGI-210">
       <title>Using <literal>classpath</literal> prefix on the root classpath (<literal>/</literal>) fails </title>
       	<para>Calling <methodname>getResource()/getResources()</methodname> from a Bundle, on the root folder (<literal>/</literal>) fails. Currently,
-      	only Equinox supports this behaviour. The issue has been reported to Felix and Knopflerfish projects and work in underway to resolve the problem.
-      	At the moment of writing this document, Felix provides support for this in the upcoming 1.1.0 release while KF aims for 2.0.3</para>
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-210">OSGI-210</ulink></para> 
+      	only Equinox and Knopflerfish (2.0.3+) support this behaviour.  At the moment of writing this document, Felix provides support for this in the 
+      	upcoming 1.1.0.</para>
+      	<para>See <ulink url="http://jira.springframework.org/browse/OSGI-210">OSGI-210</ulink></para> 
 	</section>
 
 	<section id="OSGI-237">
@@ -73,7 +73,7 @@
       	Spring-DM publishes a proxy that on each call, delegates back to the target application context for retrieving the instance. While with other beans
       	this works, in case of prototypes, this results in one-instance-per-invocation which is incorrect. Additional functionality needs to be added
       	to fully support prototypes even though, as pointed out, this involves a knowledge between Client/Server regarding the publication contract.</para>
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-237">OSGI-237</ulink></para> 
+      	<para>See <ulink url="http://jira.springframework.org/browse/OSGI-237">OSGI-237</ulink></para> 
 	</section>	
 	
 	<section id="OSGI-245">
@@ -82,27 +82,8 @@
       	more apparent when dealing with sets that use service rather then service reference equality. Since the proxy does only method interception it
       	does not seem to exist any practical solution at the moment. As a workaround, consider modifying your equality method or relying on the reference
       	equality.</para>
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-245">OSGI-245</ulink></para> 
+      	<para>See <ulink url="http://jira.springframework.org/browse/OSGI-245">OSGI-245</ulink></para> 
 	</section>
 	
-
-	<section id="OSGI-291">
-      <title>Invalid service references during unregistration on Knopflerfish</title>
-      	<para>On KF, during unregistration, the service becomes unavailable before the even tis propagated. 
-      	After investigation it seems that to support this behaviour, property "org.knopflerfish.servicereference.valid.during.unregistering" needs 
-      	should be set to "true". However, with this enabled, we found strange behaviour in the framework such as unregistration events not being 
-      	propagated while registration events being propagated twice (on 2.0.2).
-		In 2.0.1, a NPE is thrown during unregistration. The problem has been reported to KF team and we hope that the upcoming 2.0.3 will address 
-		this issue.</para>
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-291">OSGI-291</ulink></para> 
-	</section>
-
-	<section id="OSGI-292">
-      <title><classname>AbstractOsgiTest</classname> depends on internal interface</title>
-      	<para><classname>AbstractOsgiTest</classname> depends on <interfacename>org.springframework.osgi.test.internal.OsgiJUnitTest</interfacename>. 
-      	This will be fixed in the next release - please do not rely on any methods published by <interfacename>OsgiJUnitTest</interfacename>
-      	since they will be removed in the next release.</para>
-      	<para>See <ulink url="http://opensource.atlassian.com/projects/spring/browse/OSGI-292">OSGI-292</ulink></para> 
-	</section>	
   </chapter>
 </book>
